Fixed missing price icon alignment in the build list screen.

--- a/src/components/inventory-price/InventoryPriceComponent.css
+++ b/src/components/inventory-price/InventoryPriceComponent.css
@@ -32,3 +32,16 @@
   margin-left: 0.5rem;
   width: 2rem;
 }
+
+.inventory-price-missing-price-icon-no-width {
+  align-items: center;
+  color: var(--error-color);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.inventory-price-missing-price-icon-no-width > svg {
+  margin-left: 0.5rem;
+}
